--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ button {
   src: url("../fonts/GothamProBold/GothamProBold.eot");
   src: url("../fonts/GothamProBold/GothamProBold.eot?#iefix") format("embedded-opentype"), url("../fonts/GothamProBold/GothamProBold.woff") format("woff"), url("../fonts/GothamProBold/GothamProBold.ttf") format("truetype");
   font-style: normal;
-  font-weight: normal; }
+  font-weight: bold; }
 
 /* font-family: "Montserrat"; */
 @font-face {
@@ -59,13 +59,26 @@ button {
   src: local(Montserrat), url(../fonts/Montserrat/Montserrat-Regular.ttf);
   font-style: normal; }
 
-/* font-family: "Montserrat"; */
+/* font-family: "MontserratBold"; */
 @font-face {
   font-family: "MontserratBold";
   src: url(../fonts/Montserrat/Montserrat-Bold.ttf);
   /* Для IE5-8 */
   src: local(Montserrat), url(../fonts/Montserrat/Montserrat-Bold.ttf);
-  font-style: normal; }
+  font-style: normal;
+  font-weight: bold; }
+
+/* font-family: "Fira Sans"; */
+@font-face {
+  font-family: "Fira Sans";
+  src: url(../fonts/FiraSans-Bold.ttf);
+  /* Для IE5-8 */
+  src: local(Montserrat), url(../fonts/FiraSans-Bold.ttf);
+  font-style: normal;
+  font-weight: bold; }
+
+body {
+  font-family: "GothamProMedium"; }
 
 .wrapper {
   margin: 0 auto;
@@ -117,7 +130,8 @@ button {
     border-bottom: 1px solid #a100ff !important; }
 
 .masthead {
-  background: #a100ff url("../img/header--back.png");
+  background: #a100ff url("../img/header--back.png") no-repeat;
+  background-size: cover;
   padding-top: 333px;
   position: relative;
   z-index: 9; }
@@ -137,6 +151,19 @@ button {
       left: 24px;
       width: 16px;
       height: 17px; }
+  .masthead .arrow-bottom {
+    position: absolute;
+    bottom: -57px;
+    right: 50%;
+    cursor: pointer;
+    width: 114px;
+    height: 114px;
+    border-radius: 50%;
+    background: url("../img/next.svg"), url("../img/novelity-bg.jpg");
+    background-position: center, bottom;
+    background-repeat: no-repeat, repeat;
+    z-index: 0;
+    transform: translateX(50%); }
 
 .head-slogan {
   font-family: "MontserratBold";
@@ -149,7 +176,6 @@ button {
 
 .head-description {
   color: #ffffff;
-  font-family: "GothamProMedium";
   font-size: 16px;
   line-height: 24px;
   max-width: 512px;
@@ -183,16 +209,193 @@ button {
 
 .latestDesign {
   position: relative;
-  background: rgba(216, 224, 232, 0) url("../img/rectanle-31.png"); }
+  background: rgba(216, 224, 232, 0) url("../img/novelity-bg.jpg");
+  background-repeat: repeat;
+  text-align: center;
+  z-index: 0;
+  margin-bottom: 160px; }
+  .latestDesign .arrow-bottom {
+    position: absolute;
+    bottom: -55px;
+    right: 50%;
+    cursor: pointer;
+    width: 114px;
+    height: 114px;
+    border-radius: 50%;
+    background: url("../img/nextWhite.svg") no-repeat center;
+    z-index: 100;
+    background-color: #28c8c6;
+    transform: translateX(50%); }
 
-#arrow-bottom {
-  position: absolute;
-  top: -57px;
-  right: 50%;
-  cursor: pointer;
+.iphoneImg {
+  transform: translateY(3px); }
+
+.latestDesign--header {
+  padding-top: 118px;
+  margin-bottom: 41px;
+  color: #333b42;
+  text-transform: uppercase; }
+
+.section-description {
+  color: #74797e;
+  min-width: 661px;
+  margin: 0 auto;
+  margin-bottom: 73px;
+  font-size: 14px; }
+
+.highlights {
+  text-align: center;
+  position: relative; }
+  .highlights .section-description {
+    margin-bottom: 61px; }
+  .highlights .arrow-bottom {
+    position: absolute;
+    bottom: -208px;
+    right: 50%;
+    cursor: pointer;
+    width: 114px;
+    height: 114px;
+    border-radius: 50%;
+    background: url("../img/next.svg") no-repeat center;
+    z-index: 100;
+    background-color: #fff;
+    transform: translateX(50%); }
+
+.section-header {
+  color: #333b42;
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 31px; }
+
+.highlights--pros {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 151px; }
+  .highlights--pros h4 {
+    font-size: 17px;
+    color: #333b42;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 36px; }
+  .highlights--pros p {
+    color: #74797e;
+    font-size: 14px; }
+
+.highlights--pros--item {
+  max-width: 277px;
+  padding-right: 23px; }
+  .highlights--pros--item:last-child {
+    padding-right: 0; }
+
+.highlights--pros--item--shape {
+  width: 137px;
+  height: 137px;
   border-radius: 50%;
-  width: 114px;
-  height: 114px;
-  background: url("../img/next.svg") no-repeat center;
-  background-color: #ffffff;
-  z-index: 10; }
+  background-color: #8500d2;
+  margin: 0 auto;
+  position: relative;
+  margin-bottom: 39px; }
+  .highlights--pros--item--shape img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+
+.features {
+  background-color: #f6f9fa;
+  text-align: center;
+  padding-top: 136px; }
+
+.promo {
+  background: url("../img/layer-4.png") no-repeat;
+  background-size: contain;
+  position: relative;
+  padding-bottom: 697px; }
+  .promo .wrapper {
+    display: flex;
+    flex-wrap: wrap; }
+  .promo .logo--promo {
+    padding-top: 332px; }
+  .promo .head-slogan {
+    padding: 334px 0 0 41px;
+    margin-bottom: 41px; }
+  .promo .head-description {
+    padding-left: 219px;
+    margin-bottom: 322px; }
+
+.promo--notebook {
+  position: absolute;
+  left: 495px;
+  top: 462px; }
+
+.social {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: -10px;
+  margin-bottom: 51px; }
+  .social .social--item {
+    width: 95px;
+    height: 34px;
+    border-radius: 3px;
+    font-weight: bold;
+    line-height: 33px;
+    position: relative;
+    cursor: pointer;
+    opacity: 0.8; }
+    .social .social--item button {
+      font-family: "Fira Sans";
+      padding-left: 41px; }
+    .social .social--item:hover {
+      opacity: 1; }
+  .social .twitter {
+    margin-right: 6px;
+    background-color: #69b6f2; }
+    .social .twitter::after {
+      position: absolute;
+      content: "";
+      background: url("../img/tw.svg");
+      left: 17px;
+      top: 11px;
+      width: 16px;
+      height: 13px; }
+  .social .fb {
+    background-color: #3a579a; }
+    .social .fb::after {
+      position: absolute;
+      content: "";
+      background: url("../img/fb.svg");
+      left: 15px;
+      top: 9px;
+      width: 10px;
+      height: 16px; }
+
+.footer--wrap {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: baseline;
+  font-family: "Montserrat";
+  font-size: 12px;
+  color: #8297a7; }
+
+.footer--menu {
+  display: flex;
+  align-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: column;
+  line-height: 35px;
+  max-height: 154px;
+  min-width: 220px;
+  margin-bottom: 45px; }
+  .footer--menu a {
+    color: #8297a7; }
+
+.copyright {
+  max-width: 304px;
+  line-height: 35px;
+  text-align: right; }
+
+.footer--end {
+  flex-basis: 100%; }
