--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,3 +6,7 @@
 @import "blocks/header.scss";
 @import "blocks/masthead.scss";
 @import "blocks/latestDesign.scss";
+@import "blocks/highlights.scss";
+@import "blocks/features.scss";
+@import "blocks/promo.scss";
+@import "blocks/footer.scss";
