--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -26,7 +26,8 @@
 	a {
 		color: #ffffff;
 		padding: 0 2px 25px;
-		font-family: "GothamProMedium";
+		font-family: "Gotham";
+		font-weight: normal;
 		font-size: 14px;
 		&:hover {
 			border-bottom: 3px solid #28c8c6;
