--- a/sass/blocks/masthead.scss
+++ b/sass/blocks/masthead.scss
@@ -39,7 +39,8 @@
 	}
 }
 .head-slogan {
-	font-family: "MontserratBold"; 
+	font-family: "Montserrat"; 
+	font-weight: bold;
 	font-size: 60px;
 	line-height: 60px;
 	text-transform: uppercase;
