--- a/sass/blocks/footer.scss
+++ b/sass/blocks/footer.scss
@@ -15,6 +15,7 @@
 		position: relative;
 		cursor: pointer;
 		opacity: 0.8;
+		transition: all 0.5s ease;
 		button {
 			font-family: "Fira Sans";
 			padding-left: 41px;
@@ -56,6 +57,7 @@
 	justify-content: space-between;
 	align-items: baseline;
 	font-family: "Montserrat";
+	font-weight: normal;
 	font-size: 12px;
 	color: #8297a7;
 }
