--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -1,8 +1,9 @@
 .features {
 	background-color: #f6f9fa;
-	
 	padding-top: 136px;
-	
+	.wrapper {
+		padding-bottom: 98px;
+	}
 	.section-header {
 		margin-bottom: 28px;
 		text-align: center;
@@ -37,14 +38,23 @@
 			color: #f6f9fa;
 		}
 	}
-	
+	.filter-output {
+		
+	}
 	.filter--item__active {
 		background-color: rgba(40, 200, 198, 1);
 		color: #f6f9fa;
 	}
 	.output--items {
-		display: flex;
+		display: none;
+		opacity: 0;
 		justify-content: space-around;
+		transition: all 0.5s ease;
+	}
+	.output--items__active {
+		display: flex;
+		opacity: 1;
+		transition: all 0.5s ease;
 	}
 	.output--item {
 		max-width: 382px;
