--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,16 @@ body {
   padding: 0 50px;
   max-width: 1182px; }
 
+.scrolled {
+  margin-top: -77px;
+  background-color: rgba(63, 0, 100, 0.8);
+  padding: 5px 0; }
+
 .header {
   position: fixed;
   width: 100%;
-  z-index: 11; }
+  z-index: 1000;
+  transition: all 0.5s ease; }
   .header .wrapper {
     display: flex;
     flex-direction: row;
@@ -122,7 +128,8 @@ body {
   text-transform: capitalize;
   padding: 10px 55px 10px 30px;
   border: 1px solid #a100ff;
-  font-size: 16px; }
+  font-size: 16px;
+  opacity: 0.8; }
   .menu .btn-join::after {
     background: url("../img/btn-arrow.svg");
     width: 16px;
@@ -130,7 +137,8 @@ body {
     top: 10px;
     right: 23px; }
   .menu .btn-join:hover {
-    border-bottom: 1px solid #a100ff !important; }
+    border-bottom: 1px solid #a100ff !important;
+    opacity: 1; }
 
 .masthead {
   background: #a100ff url("../img/header--back.png") no-repeat;
