--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ body {
 .header {
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 10;
   transition: all 0.5s ease; }
   .header .wrapper {
     display: flex;
@@ -283,7 +283,7 @@ body {
     height: 114px;
     border-radius: 50%;
     background: url("../img/next.svg") no-repeat center;
-    z-index: 100;
+    z-index: 5;
     background-color: #fff;
     transform: translateX(50%); }
 
@@ -501,3 +501,33 @@ body {
 .footer--end {
   flex-basis: 100%;
   margin-bottom: 151px; }
+
+body {
+  overflow: hidden; }
+
+/* Preloader */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  /* change if the mask should have another color then white */
+  z-index: 99;
+  /* makes sure it stays on top */ }
+
+#status {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  left: 50%;
+  /* centers the loading animation horizontally one the screen */
+  top: 50%;
+  /* centers the loading animation vertically one the screen */
+  background-image: url(../img/status.gif);
+  /* path to your loading animation */
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: -100px 0 0 -100px;
+  /* is width and height divided by two */ }
